# mcp-crewai-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  INSTALL.md  README.md  crew_builder.py  docker-compose.dev.yml  docker-compose.yml  evolution_history.db  evolving_crew_flow.py  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  start_http.py  test_config.json
dashboard/backend/: dashboard_api.py
dashboard/frontend/: package.json
docker/: backup.sh  generate-certs.sh  init-db.sql  nginx-simple.conf  nginx.conf  redis.conf  ssl.conf
docs/: DOCKER_DEPLOYMENT.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REAL_EXECUTION_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION.md  SETUP.md  setup_web_search.md
examples/: README.md  demo_cyanview_guide.py  demo_cyanview_simple.py  demo_revolutionary_features.py  demo_usage.py  demonstrate_verbose_crew.py  execute_cyanview_guide.py  goal_to_crew.py  intelligent_crew_creation.py  mcp_discovery_configs.json  personality_templates.json  show_intelligent_crew_working.py  simple_crew_interface.py  simple_interface.py  verbose_crew_execution.py
monitoring/: prometheus.yml
src/mcp_crewai/: __init__.py  config.py  dynamic_instructions.py  (+13 more)
tests/: test_advanced.py  test_autonomous_agent_improvement.py  test_basic.py  test_evolution.py  test_real_crewai_execution.py  test_verbose_execution_with_termination.py
tools/: deploy.sh  monitor.sh  need_driven_workflow.py  real_crewai_execution.py
web/: README.md  api_bridge.py  index.html  requirements.txt  start_web_interface.sh
(+3 files in other folders)
