[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-crewai-server"
version = "0.1.0"
description = "Revolutionary MCP Server for CrewAI with autonomous evolution"
authors = [{name = "Alan", email = "your.email@domain.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "crewai>=0.70.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0"
]

[project.scripts]
mcp-crewai-server = "mcp_crewai.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"